--- a/solution_1/CMakeLists.txt
+++ b/solution_1/CMakeLists.txt
@@ -1,6 +1,6 @@
-project(region_loader CXX)
+project(data_loader CXX)
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(region_loader src/main.cpp)
+add_executable(data_loader src/main.cpp)
 
-target_link_libraries(region_loader PRIVATE pqxx pq gflags)
+target_link_libraries(data_loader PRIVATE pqxx pq gflags)
